<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/tab1"
                android:orientation="vertical" 
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cam_record_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/incam_recsize_rgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/rz_480p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="480P" />

                    <RadioButton
                        android:id="@+id/rz_720p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="720P" />

                    <RadioButton
                        android:id="@+id/rz_1080p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1080P" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:orientation="vertical" 
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/check_use_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_check_use_wificam" />

                <TextView
                    android:id="@+id/rotateinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_cam_addr" />

                <EditText
                    android:id="@+id/pref_edit_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_cam_port" />

                <EditText
                    android:id="@+id/pref_edit_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_cam_command" />

                <EditText
                    android:id="@+id/pref_edit_command"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>
