<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/camera_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="camera name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <ImageView
            android:id="@+id/pref_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchCamPreference"
            android:src="@android:drawable/ic_menu_preferences" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/statusInfoArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ic_bw_qual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="toggle_bw_info_detail"
                    android:src="@drawable/ic_bw_00" />

                <LinearLayout
                    android:id="@+id/bw_info_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_sigqual"
                            android:textIsSelectable="false" />

                        <TextView
                            android:id="@+id/sigQualTrack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="r-cnt"
                            android:textIsSelectable="false" />

                        <TextView
                            android:id="@+id/rawCountTrack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ic_gps_qual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="toggle_gps_info_detail"
                    android:src="@drawable/ic_gps_00" />

                <LinearLayout
                    android:id="@+id/gps_info_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_location"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/locationTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/time_indicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fadeScrollbars="true"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/rotateinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />
        </ScrollView>

        <FrameLayout
            android:id="@+id/previewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onTap" >
        </FrameLayout>

        <ImageView
            android:id="@+id/btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="doStuff"
            android:src="@drawable/ic_rec_disabled" />

        <ImageView
            android:id="@+id/switch_mode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/title_data_mgr"
            android:onClick="gotoManager"
            android:src="@drawable/ic_change_rec" />
    </RelativeLayout>

</LinearLayout>